WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226311
REGRESSION (
r244434
) Dispatch intrinsicContentsSizeChanged on the main frame only
https://bugs.webkit.org/show_bug.cgi?id=226311
Summary
REGRESSION (r244434) Dispatch intrinsicContentsSizeChanged on the main frame ...
alan
Reported
2021-05-26 18:44:57 PDT
using the main frame content size. <
rdar://57623837
>
Attachments
Patch
(4.68 KB, patch)
2021-05-26 19:40 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.54 KB, patch)
2021-05-26 21:06 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-05-26 19:40:06 PDT
Created
attachment 429828
[details]
Patch
Tim Horton
Comment 2
2021-05-26 19:45:03 PDT
Comment on
attachment 429828
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=429828&action=review
> Source/WebCore/ChangeLog:10 > + the content size reporting should only happen on the main frame. The client is only interested > + in the enclosing size of the content.
(And, critically, the API to retrieve the information is per-WKWebView, it doesn't expose this information on a frame-by-frame basis).
alan
Comment 3
2021-05-26 21:06:05 PDT
Created
attachment 429841
[details]
Patch
EWS
Comment 4
2021-05-27 06:28:04 PDT
Committed
r278164
(
238208@main
): <
https://commits.webkit.org/238208@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 429841
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug